--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ packages =
   plasTeX.Imagers
   plasTeX.Packages
   plasTeX.Renderers
+  plasTeX.Renderers.Gerby
   plasTeX.Renderers.XHTML
   plasTeX.Renderers.XHTML.Themes
   plasTeX.Renderers.XHTML.Themes.default
@@ -63,6 +64,7 @@ install_requires =
 [options.package_data]
 plasTeX = *.xml, plasTeXrc
 plasTeX.Base.LaTeX = *.xml, *.txt
+plasTeX.Renderers.Gerby = *.html','*.htm','*.xml','*.zpt','*.zpts','*.jinja2','*.jinja2s
 plasTeX.Renderers.DocBook = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
 plasTeX.Renderers.DocBook.Themes.default = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
 plasTeX.Renderers.DocBook.Themes.book = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
